YNU-606: implement cross app sessions rebalancing (#497)
---------
